Fix overflow /Gestionnaire-faire_passer_test

--- a/ressources/stylesheets/Stylesheet_test_a_passer.css
+++ b/ressources/stylesheets/Stylesheet_test_a_passer.css
@@ -7,7 +7,15 @@
 #section_centrale {
     position: absolute;
     left: 18%;
-    top: 50px;
+    top: 0px;
+    height: 70%;
+}
+
+#table_tests_associes {
+    display: block;
+    overflow: auto;
+    white-space: nowrap;
+    max-height: 100%;
 }
 
 h1
